[gd_scene load_steps=5 format=3 uid="uid://d1fymydnkhpkn"]

[ext_resource type="Script" path="res://scenes/title_screen.gd" id="1_mqhy8"]
[ext_resource type="Texture2D" uid="uid://bg1h0eibt4tqm" path="res://art/StartButton.png" id="2_64dwq"]
[ext_resource type="Texture2D" uid="uid://ghyilfq0jqdk" path="res://art/Backgrounds/StartScreen.png" id="2_y25ge"]
[ext_resource type="AudioStream" uid="uid://cfxaq48w38n2g" path="res://audio/start.wav" id="4_qh410"]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_mqhy8")

[node name="StartScreen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_y25ge")

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="StartButton" type="Sprite2D" parent="Area2D"]
position = Vector2(1263, 741)
texture = ExtResource("2_64dwq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(1171, 587, 1379, 770, 1164, 910)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1243.9, 753.294)
stream = ExtResource("4_qh410")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
